# aiti_guru_test

./: .env.sample  Dockerfile  Makefile  README.md  alembic.ini  config.py  docker-compose.yml  pyproject.toml
.github/workflows/: .ci.yml  .pre-commit-config.yaml
app/: main.py
app/api/: router.py
app/api/orders/: router.py
app/api/orders/resources/crud/: order_repo.py
app/api/orders/resources/exceptions/: __init__.py  base.py  order.py
app/api/orders/resources/schemas/: error.py  order_item.py
app/api/orders/resources/services/: order_service.py
app/db/: session.py
app/models/: category.py  client.py  order.py  order_item.py  product.py
app/schemas/: base.py
app/utils/: contextvars.py  handlers.py  logging.py  openapi.py
migrations/: env.py
migrations/versions/: 2026_01_19_init_tables.py  2026_01_20_seed_test_data.py
sql/: task_2.1.sql  task_2.2.sql  task_2.3.1.sql  task_2.3.2.md
