[tool.poetry]
name = "aiti-guru-test"
version = "0.1.0"
description = ""
authors = ["PavelBackend <samoesamokhin@yandex.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
sqlalchemy = "^2.0.45"
asyncpg = "^0.31.0"
alembic = "^1.18.1"
pydantic-settings = "^2.12.0"
psycopg = {extras = ["binary"], version = "^3.3.2"}
fastapi-restful = "^0.6.0"
typing-inspect = "^0.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"
ruff = "^0.14.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
